WIP: Refining Layout Structure - Establishing the foundation for layout adjustments - Not a final version yet, work in progress..

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -6,6 +6,14 @@
   gap: 3rem;
   margin: auto;
 
+  & > :first-child {
+    flex: 3;
+  }
+
+  .homeContainer {
+    flex: 7;
+  }
+
   &-container {
     margin: auto;
     display: flex;
