--- a/src/components/Category/Category.module.scss
+++ b/src/components/Category/Category.module.scss
@@ -28,12 +28,12 @@
   }
 
   .toggleIcon {
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     cursor: pointer;
   }
 
   .folderIcon {
-    font-size: 1rem;
+    font-size: 0.7rem;
   }
 
   .subCategoryList {
@@ -42,8 +42,8 @@
   }
 
   .mdLink {
-    font-size: 0.9rem;
-    color: blue;
+    font-size: 0.8rem;
+    color: #ffffff;
     text-decoration: underline;
     margin-left: 0.5rem;
   }
