--- a/src/components/LogTerminal/LogTerminal.module.scss
+++ b/src/components/LogTerminal/LogTerminal.module.scss
@@ -1,10 +1,10 @@
 .terminal {
-  padding: 1rem;
+  padding: 0.3rem;
   font-family: 'Courier New', monospace;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   background: #1e1e1e;
   color: #c5c5c5;
-  max-height: 180px;
+  height: 85px;
   overflow-y: auto;
   white-space: pre-wrap;
 }
