--- a/src/styles/base/_init.scss
+++ b/src/styles/base/_init.scss
@@ -1,5 +1,6 @@
 html,
 body {
+  height: 100%;
   background-color: hsl(var(--background));
   color: hsl(var(--zinc-700));
   font-family: "Pretendard Variable", sans-serif;
